--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Tabs, tabs, tabs!</h1>
 
 <tabset>
-  <tab>
+  <tab heading="Tab 1">
 	  Lorem ipsum dolor sit amet, ut eam nullam utroque liberavisse, ea
 	  graecis tractatos contentiones quo. Ipsum phaedrum scripserit sit id,
 	  eu insolens indoctum vel, eos eu offendit delectus tincidunt. Eum
@@ -19,10 +19,10 @@
 	  noluisse deterruisset sea.
 	</tab>
 
-	<tab>
+	<tab heading="Tab 2">
 		Just another tab!
 	</tab>
-	
+
 </tabset>
   </body>
 </html>
