disabled feature now showing

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 		Just another tab!
 	</tab>
 
+	<tab heading="Tab 3" disable="true">
+		Just another tab!
+	</tab>
+	
+	<tab heading="Tab 4">
+		Just another tab!
+	</tab>
+
 </tabset>
   </body>
 </html>
