--- a/tabset.html
+++ b/tabset.html
@@ -1,7 +1,9 @@
 <div role="tabpanel">
   <ul class="nav nav-tabs" role="tablist">
     <li role="presentation"
-      ng-repeat="tab in tabset.tabs">
+      ng-repeat="tab in tabset.tabs"
+      ng-class="{ 'active' : tab.active, 'disabled' : tab.disabled } "
+      >
 
       <a href=""
         role="tab"
