--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body ng-app="app">
     <h1>Tabs, tabs, tabs!</h1>
 
-<tabset>
+<tabset type="pills">
   <tab heading="Tab 1">
 	  Lorem ipsum dolor sit amet, ut eam nullam utroque liberavisse, ea
 	  graecis tractatos contentiones quo. Ipsum phaedrum scripserit sit id,
